# rentropy

./: Cargo.toml  LICENSE  Makefile  README.md  build-wheels.sh  pyproject.toml  setup.py
rentropy/: __init__.py
src/: lib.rs
tests/: test_py_interface.py
